<resources>
    <string name="app_name">lEARN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in_button">Log In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="logo_description">Start lEARNing</string>
    <string name="empty_course">No videos added for this course yet. Stay tuned for updates!!</string>
    <string name="video_title">VIDEO TITLE</string>
    <string name="video_description">VIDEO DESCRIPTION</string>
    <string name="no_lab_found">No virtual labs have been added yet. Stay tuned for updates!!</string>
    <string name="empty_lab">No problems added for this lab yet. Stay tuned for updates!!</string>
    <string name="open_editor">Start Coding</string>
    <string name="custom_coding_input">Enter your custom input in the box below</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="empty_progress">Progress monitor will start showing up once you start learning..</string>
    <string name="rate_course">Rate this course: </string>
    <string name="empty_article">No articles found. Stay tuned for updates!!</string>
    <string name="lorel_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>
